--- a/src/main/resources/org.openjfx/scene.fxml
+++ b/src/main/resources/org.openjfx/scene.fxml
@@ -2,27 +2,39 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="719.0" prefWidth="1285.0" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
-<children>
-    <AnchorPane fx:id="anchorPane" prefHeight="898.0" prefWidth="1285.0">
-        <children>
-            <Label layoutX="45.0" layoutY="22.0" text="Input tab" />
-            <TextArea fx:id="inputField" layoutX="45.0" layoutY="49.0" minHeight="300.0" minWidth="300.0" prefHeight="512.0" prefWidth="1195.0" promptText="Enter your tab here or drag and drop it as a text file" />
-            <Label layoutX="45.0" layoutY="577.0" text="Conversion Options" />
-            <Button layoutX="1106.0" layoutY="671.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Convert" />
-        </children>
-    </AnchorPane>
-</children>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="719.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
+    <children>
+        <AnchorPane fx:id="anchorPane" prefHeight="719.0" prefWidth="1002.0">
+            <children>
+                <Label layoutX="45.0" layoutY="28.0" text="Input tab">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+                <TextArea fx:id="inputField" layoutX="45.0" layoutY="67.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="862.0" promptText="Enter your tab here or drag and drop it as a text file">
+               <font>
+                  <Font name="Monospaced Regular" size="12.0" />
+               </font></TextArea>
+                <Label layoutX="52.0" layoutY="588.0" text="Conversion Options">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+                <Button layoutX="772.0" layoutY="653.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Convert" />
+            <Separator layoutX="48.0" layoutY="610.0" prefHeight="0.0" prefWidth="862.0" />
+            </children>
+        </AnchorPane>
+    </children>
+    <columnConstraints>
+        <ColumnConstraints />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints />
+    </rowConstraints>
 </GridPane>
