--- a/src/main/resources/org.openjfx/styles.css
+++ b/src/main/resources/org.openjfx/styles.css
@@ -11,3 +11,15 @@
     -fx-border-color: #ccc;
     -fx-font-family: Monospaced;
 }
+
+.redHighlight {
+    -rtfx-background-color: #ffa6a6;
+}
+
+.blueHighlight {
+    -rtfx-background-color: #b4eaff;
+}
+
+.yellowHighlight {
+    -rtfx-background-color: #ffff76;
+}
