--- a/src/main/resources/org.openjfx/text_input_styles.css
+++ b/src/main/resources/org.openjfx/text_input_styles.css
@@ -1,11 +1,11 @@
-.redHighlight {
+.highPriorityError {
     -rtfx-background-color: #ffa6a6;
 }
 
-.blueHighlight {
-    -rtfx-background-color: #ccfffd;
+.mediumPriorityError {
+    -rtfx-background-color: #ffe2a3;
 }
 
-.orangeHighlight {
-    -rtfx-background-color: #ffe2a3;
+.lowPriorityError {
+    -rtfx-background-color: #ccfffd;
 }
