--- a/src/main/resources/org.openjfx/scene.fxml
+++ b/src/main/resources/org.openjfx/scene.fxml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import org.fxmisc.richtext.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import org.fxmisc.richtext.CodeArea?>
 
-<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
+<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
     <children>
-        <AnchorPane fx:id="anchorPane" prefHeight="719.0" prefWidth="1002.0" stylesheets="@styles.css">
+        <AnchorPane fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="719.0" prefWidth="1002.0" stylesheets="@styles.css">
             <children>
                 <Label layoutX="14.0" layoutY="39.0" styleClass="headingLabel" text="INSERT" textFill="WHITE">
                <font>
@@ -15,7 +23,7 @@
                </font></Label>
                 <Button layoutX="811.0" layoutY="647.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Convert" />
             <CodeArea fx:id="TEXT_AREA" layoutX="10.0" layoutY="67.0" prefHeight="569.0" prefWidth="938.0" stylesheets="@text_input_styles.css" />
-            <CheckBox styleClass="label" layoutX="890.0" layoutY="40.0" mnemonicParsing="false" text="WRAP" />
+            <CheckBox layoutX="890.0" layoutY="40.0" mnemonicParsing="false" styleClass="label" text="WRAP" />
             <MenuBar fx:id="menuBar" layoutY="1.0" prefHeight="25.0" prefWidth="958.0">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
