--- a/src/main/resources/org.openjfx/scene.fxml
+++ b/src/main/resources/org.openjfx/scene.fxml
@@ -7,49 +7,59 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import org.fxmisc.richtext.CodeArea?>
 
-<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
-    <children>
-        <AnchorPane fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="719.0" prefWidth="1002.0" stylesheets="@styles.css">
-            <children>
-                <Label layoutX="14.0" layoutY="39.0" styleClass="headingLabel" text="INSERT" textFill="WHITE">
-               <font>
-                  <Font name="Calibri" size="16.0" />
-               </font></Label>
-                <Button layoutX="811.0" layoutY="647.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Convert" />
-            <CodeArea fx:id="TEXT_AREA" layoutX="10.0" layoutY="67.0" prefHeight="569.0" prefWidth="938.0" stylesheets="@text_input_styles.css" />
-            <CheckBox layoutX="890.0" layoutY="40.0" mnemonicParsing="false" styleClass="label" text="WRAP" />
-            <MenuBar fx:id="menuBar" layoutY="1.0" prefHeight="25.0" prefWidth="958.0">
-              <menus>
+<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="450.0" minWidth="640.0" prefHeight="700.0" prefWidth="1000.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
+    <top>
+        <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
+            <menus>
                 <Menu mnemonicParsing="false" text="File">
-                  <items>
-                      <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleNew" text="New" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open..." />
+                        <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Save" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Save as" />
+                    </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Settings">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Program Settings" />
-                  </items>
+                <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Delete" />
+                    </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Readme" />
-                  </items>
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="About" />
+                    </items>
                 </Menu>
-              </menus>
-            </MenuBar>
+            </menus>
+        </MenuBar>
+    </top>
+    <center>
+        <AnchorPane prefHeight="200.0" prefWidth="666.0" BorderPane.alignment="CENTER">
+            <children>
+                <CodeArea fx:id="TEXT_AREA" layoutX="13.0" layoutY="32.0" onMouseClicked="#convertButtonHandle" prefHeight="582.0" prefWidth="974.0" stylesheets="@text_input_styles.css" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="32.0" />
+                <AnchorPane layoutX="13.0" prefHeight="32.0" prefWidth="974.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="0.0">
+                    <children>
+                        <Label layoutY="1.0" text="INPUT" AnchorPane.leftAnchor="0.0">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="wrapCheckbox" layoutX="885.0" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#setWrapProperty" text="Wrap text" textFill="WHITE" AnchorPane.rightAnchor="14.999999999999972" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="12.0" layoutY="614.0" prefHeight="52.0" prefWidth="977.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0">
+                    <children>
+                        <Button layoutX="853.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="30.0" prefWidth="106.0" text="Convert" AnchorPane.rightAnchor="16.599999999999994">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Button>
+                    </children>
+                </AnchorPane>
             </children>
         </AnchorPane>
-    </children>
-    <columnConstraints>
-        <ColumnConstraints />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints />
-    </rowConstraints>
-</GridPane>
+    </center>
+</BorderPane>
