--- a/src/main/resources/org.openjfx/convertWindow.fxml
+++ b/src/main/resources/org.openjfx/convertWindow.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
+<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
     <AnchorPane fx:id="convertPane" prefHeight="575.0" prefWidth="960.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
         <children>
             <Label layoutX="-53.0" layoutY="6.0" text="Label" />
-            <Button layoutX="662.0" layoutY="526.0" mnemonicParsing="false" onMouseClicked="#cancelConvertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Cancel" />
-            <Button layoutX="810.0" layoutY="526.0" mnemonicParsing="false" onMouseClicked="#saveConvertedButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Save" />
+            <Button layoutX="662.0" layoutY="526.0" mnemonicParsing="false" onAction="#cancelConvertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Cancel" />
+            <Button layoutX="810.0" layoutY="526.0" mnemonicParsing="false" onAction="#saveConvertedButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Save" />
         </children>
     </AnchorPane>
    <columnConstraints>
