--- a/src/main/resources/org.openjfx/convertWindow.fxml
+++ b/src/main/resources/org.openjfx/convertWindow.fxml
@@ -2,13 +2,37 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="958.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
-    <AnchorPane fx:id="convertPane" prefHeight="575.0" prefWidth="960.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="235.0" prefWidth="721.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.FXMLController">
+    <AnchorPane fx:id="convertPane" prefHeight="235.0" prefWidth="721.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
         <children>
-            <Label layoutX="-53.0" layoutY="6.0" text="Label" />
-            <Button layoutX="662.0" layoutY="526.0" mnemonicParsing="false" onMouseClicked="#cancelConvertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Cancel" />
-            <Button layoutX="810.0" layoutY="526.0" mnemonicParsing="false" onMouseClicked="#saveConvertedButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Save" />
+            <Label layoutX="14.0" layoutY="14.0" text="Title" AnchorPane.leftAnchor="14.0">
+            <font>
+               <Font size="14.0" />
+            </font>
+            </Label>
+            <Button layoutX="425.0" layoutY="183.0" mnemonicParsing="false" onMouseClicked="#cancelConvertButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Cancel" />
+            <Button layoutX="573.0" layoutY="183.0" mnemonicParsing="false" onMouseClicked="#saveConvertedButtonHandle" prefHeight="33.0" prefWidth="133.0" text="Save" />
+         <TextField fx:id="titleField" layoutX="14.0" layoutY="34.0" prefHeight="25.0" prefWidth="694.0" />
+         <Label layoutX="14.0" layoutY="69.0" text="Artist">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <TextField fx:id="artistField" layoutX="14.0" layoutY="89.0" prefHeight="25.0" prefWidth="694.0" />
+         <ComboBox fx:id="conversionMethodSelect" layoutX="14.0" layoutY="143.0" prefHeight="25.0" prefWidth="278.0" />
+         <Label layoutX="14.0" layoutY="123.0" text="Conversion Method">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Label layoutX="311.0" layoutY="123.0" text="File Name">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <TextField fx:id="fileNameField" layoutX="311.0" layoutY="143.0" prefHeight="25.0" prefWidth="396.0" />
         </children>
     </AnchorPane>
    <columnConstraints>
