--- a/src/main/resources/org.openjfx/scene.fxml
+++ b/src/main/resources/org.openjfx/scene.fxml
@@ -23,13 +23,9 @@
                         <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Save as" />
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                    </items>
-                </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
+                        <MenuItem mnemonicParsing="false" text="Settings" />
                         <MenuItem mnemonicParsing="false" text="About" />
                     </items>
                 </Menu>
