--- a/src/main/resources/org.openjfx/styles.css
+++ b/src/main/resources/org.openjfx/styles.css
@@ -17,7 +17,7 @@
 .tool-bar {
     background-color: #000000;
 }
-#borderPane, #menuBar, #convertPane, #settingsPane {
+#borderPane, #menuBar, #convertPane, #settingsPane, #timeSignaturePane {
     -fx-background-color: rgb(50,50,50);
 
 }
