Added Note Player functionality. Select one or more measures and right click to access the Note Player window

--- a/src/main/resources/org.openjfx/text_input_styles.css
+++ b/src/main/resources/org.openjfx/text_input_styles.css
@@ -9,3 +9,8 @@
 .lowPriorityError {
     -rtfx-background-color: #ccfffd;
 }
+
+.unimportantError  {
+    -rtfx-background-color: #00204020;
+    border: #cccccc;
+}
