--- a/src/main/resources/GUI/scene.fxml
+++ b/src/main/resources/GUI/scene.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import org.fxmisc.flowless.*?>
 <?import org.fxmisc.richtext.*?>
 
-<?import org.fxmisc.flowless.VirtualizedScrollPane?>
 <BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="450.0" minWidth="640.0" prefHeight="700.0" prefWidth="1000.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLController">
     <top>
         <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
@@ -30,11 +30,11 @@
     <center>
         <AnchorPane prefHeight="200.0" prefWidth="666.0" BorderPane.alignment="CENTER">
             <children>
-                    <VirtualizedScrollPane BorderPane.alignment="CENTER" layoutX="693.0" layoutY="70.0" prefHeight="507.0" prefWidth="898.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="32.0" >
-                        <content>
-                            <CodeArea fx:id="TEXT_AREA"  stylesheets="@text_input_styles.css" />
-                        </content>
-                    </VirtualizedScrollPane>
+                <VirtualizedScrollPane layoutX="693.0" layoutY="70.0" prefHeight="507.0" prefWidth="898.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="32.0" BorderPane.alignment="CENTER">
+                    <content>
+                        <CodeArea fx:id="TEXT_AREA" stylesheets="@text_input_styles.css" />
+                    </content>
+                </VirtualizedScrollPane>
                 <AnchorPane layoutX="13.0" prefHeight="32.0" prefWidth="974.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <Label layoutY="1.0" text="INPUT" AnchorPane.leftAnchor="0.0">
@@ -47,7 +47,7 @@
                 </AnchorPane>
                 <AnchorPane layoutX="12.0" layoutY="614.0" prefHeight="52.0" prefWidth="977.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0">
                     <children>
-                        <Button layoutX="853.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="30.0" prefWidth="106.0" text="Convert" AnchorPane.rightAnchor="16.599999999999994">
+                        <Button fx:id="convertButton" disable="true" layoutX="853.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#convertButtonHandle" prefHeight="30.0" prefWidth="106.0" text="Convert" AnchorPane.rightAnchor="16.599999999999994">
                             <font>
                                 <Font size="14.0" />
                             </font>
