connected score type chooser to backend

--- a/src/main/resources/GUI/text_input_styles.css
+++ b/src/main/resources/GUI/text_input_styles.css
@@ -7,10 +7,9 @@
 }
 
 .lowPriorityError {
-    -rtfx-background-color: #ccfffd;
-}
-
-.unimportantError  {
     -rtfx-background-color: #00204020;
     border: #cccccc;
 }
+
+/*.unimportantError  {*/
+/*}*/
