--- a/src/main/resources/GUI/settingsWindow.fxml
+++ b/src/main/resources/GUI/settingsWindow.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
 <AnchorPane fx:id="settingsPane" prefHeight="214.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLController">
     <Label layoutX="14.0" layoutY="14.0" text="Output Folder" AnchorPane.leftAnchor="14.0">
         <font>
