--- a/src/main/resources/GUI/timeSignatureWindow.fxml
+++ b/src/main/resources/GUI/timeSignatureWindow.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <AnchorPane fx:id="timeSignaturePane" prefHeight="105.0" prefWidth="340.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.TimeSignatureWindow">
    <children>
       <Button layoutX="169.0" layoutY="69.0" mnemonicParsing="false" text="Save Measure Information" />
