--- a/src/main/resources/GUI/convertWindow.fxml
+++ b/src/main/resources/GUI/convertWindow.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 <AnchorPane fx:id="convertPane" maxHeight="235.0" maxWidth="721.0" minHeight="200.0" minWidth="700.0" prefHeight="235.0" prefWidth="721.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Title" AnchorPane.leftAnchor="14.0">
